# cidit

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build-binaries.yml  publish-crates.yml  release-please.yml  test.yml
src/: cidr.rs  inspector.rs  main.rs
src/cidr/: ipv4.rs  ipv6.rs
src/core/: ip.rs
src/inspector/: ipv4.rs  ipv6.rs
src/ip/: ipv4.rs
