[package]
name = "cidit"
version = "0.0.9"
authors = ["Albert Fazullin <hex22a@gmail.com>"]
license = "MIT"
description = "CIDR Inspection Tool"
repository = "https://github.com/hex22a/cidit"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }

[[bin]]
name = "cidit"
path = "src/main.rs"