[package]
name = "cidit"
version = "1.0.0"
authors = ["Albert Fazullin <hex22a@gmail.com>"]
license = "MIT"
description = "CIDR Inspection Tool"
repository = "https://github.com/hex22a/cidit"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tabled = "0.20.0"

[[bin]]
name = "cidit"
path = "src/main.rs"