[package]
name = "cidit"
version = "3.1.2"
authors = ["Albert Fazullin <hex22a@gmail.com>"]
license = "MIT"
description = "CIDR Inspection Tool"
repository = "https://github.com/hex22a/cidit"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
ipnet = "2.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tabled = "0.20.0"
thiserror = "2.0.18"

[[bin]]
name = "cidit"
path = "src/main.rs"
